--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -190,10 +190,10 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="view1">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="" iconclass="" name="dialog1">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Update Profile Picture" iconclass="" name="dialog1">
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button1"></wm-button>
-                <wm-button class="btn-primary" caption="Save" name="buttonSave" on-click="Widgets.liveformUpdate.save()"></wm-button>
+                <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
+                <wm-button class="btn-primary" caption="Save" name="buttonSave" on-click="Widgets.liveformUpdate.save()" iconclass="wi wi-save"></wm-button>
             </wm-dialogactions>
             <wm-liveform novalidate="false" errormessage="" title="" iconclass="" defaultmode="Edit" dataset="bind:Variables.Cx2UsersData.dataSet" captionalign="left" captionposition="top" name="liveformUpdate">
                 <wm-layoutgrid columns="1" name="layoutgrid4">
